--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,7 @@ body {
 .menu {
   display: flex;
   align-items: center;
+  margin-top: ;
 }
 
 .logo-text {
@@ -104,6 +105,7 @@ body {
 .menu-link:hover,
 .menu-link:focus {
   color: var(--accent-color);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-item {
@@ -136,6 +138,22 @@ body {
 .header-contacts:hover,
 .header-contacts:focus {
   color: var(--accent-color);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio {
+  position: relative;
+}
+
+.portfolio::after {
+  position: absolute;
+  bottom: -40px;
+  content: "";
+  background: #2196f3;
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
 }
 
 /*====END HEADER====*/
@@ -247,6 +265,7 @@ body {
 /*====END FEATURES SECTION====*/
 
 /*====WHAT WE ARE DOING====*/
+
 .activity-list {
   display: flex;
   margin-left: -30px;
@@ -257,9 +276,11 @@ body {
   flex-basis: calc((100%-90px) / 3);
   margin-left: 30px;
   margin-top: 50px;
+  display: block;
 }
 
 .activity {
+  position: relative;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
@@ -269,6 +290,38 @@ body {
   margin-top: 94px;
 
   color: #212121;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.activity-link {
+}
+
+.activity-front {
+  position: relative;
+}
+
+.activity-overlay-text {
+  background: rgba(47, 48, 58, 0.8);
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: #ffffff;
+
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  padding-top: 27px;
+
+  bottom: 0;
+  left: 0;
+  height: 70px;
+  width: 370px;
 }
 
 /*====OUR TEAM SECTION====*/
@@ -358,11 +411,13 @@ body {
 .our-team-social-link:hover,
 .our-team-social-link:focus {
   background-color: #2196f3;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .our-team-social-link :hover .our-team-social-link-icon,
 .our-team-social-link:focus .our-team-social-link-icon {
   fill: white;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .regular-customers-tittle {
@@ -435,6 +490,7 @@ body {
 .images-list-item:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-list-btn {
@@ -460,6 +516,7 @@ body {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-tittle {
@@ -472,6 +529,50 @@ body {
   padding-top: 4px;
   margin-bottom: 94px;
   padding-left: 30px;
+}
+
+.images-list-item {
+  display: block;
+}
+
+.team-img-wrapper {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  background-color: rgba(33, 150, 243, 0.9);
+
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.55;
+  /* or 156% */
+  letter-spacing: 0.03em;
+
+  color: #ffffff;
+
+  padding-left: 24px;
+  padding-top: 63px;
+  padding-right: 24px;
+  padding-bottom: 63px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-list-link-wrapper:hover .overlay,
+.team-list-link-wrapper:focus .overlay {
+  transform: translateX(0%);
+}
+
+.team-list-link-wrapper {
+  color: #000000;
 }
 
 /*==END PORTFOLIO MAIN==*/
@@ -543,11 +644,13 @@ body {
 .social-list__item-link:hover,
 .social-list__item-link:focus {
   background-color: #2196f3;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-list__item-link:hover .social-list__item-icon,
 .social-list__item-link:focus .social-list__item-icon {
   fill: #2196f3;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .delajem-flex {
@@ -600,4 +703,50 @@ body {
 
 .twitter-footer-icon {
   fill: white;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: opacity 700ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 700ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 528px;
+  height: 580px;
+  background-color: #ffffff;
+  transform: translate(-50%, -50%);
+}
+
+.close-btn {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: transparent;
+  cursor: pointer;
+  top: 8px;
+  right: 8px;
+  padding: 0;
+}
+
+.backdrop-modal-btn {
+  fill: #000000;
+  width: 11px;
+  height: 11px;
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
